// ==========================================================================
// Geekfy — Schema Prisma
// Baseado no PRD "Plataforma de Divulgação para Lojas Geek de Manaus"
// Cobre: RF01–RF17 (cadastro de lojas, produtos, busca por fandom via
// embeddings/pgvector, mapa de eventos, painel admin)
// ==========================================================================

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider   = "postgresql"
  url        = env("DATABASE_URL")
  // pgvector precisa estar habilitado no Postgres (Supabase/Neon já suportam)
  extensions = [pgvector(map: "vector")]
}

// ---------------------------------------------------------------------------
// Enums
// ---------------------------------------------------------------------------

enum Role {
  LOJISTA
  ADMIN
}

enum StoreStatus {
  PENDING   // aguardando aprovação do admin (onboarding curado, RF02)
  APPROVED
  REJECTED
  SUSPENDED
}

enum ProductStatus {
  ACTIVE
  INACTIVE
}

// ---------------------------------------------------------------------------
// Usuários (lojista ou admin) — RF01, RF17
// ---------------------------------------------------------------------------

model User {
  id           String   @id @default(cuid())
  name         String
  email        String   @unique
  passwordHash String
  role         Role     @default(LOJISTA)
  createdAt    DateTime @default(now())
  updatedAt    DateTime @updatedAt

  store        Store?   // 1 lojista -> 1 loja (MVP)

  @@index([role])
  @@map("users")
}

// ---------------------------------------------------------------------------
// Loja — RF02, RF04, RF05
// ---------------------------------------------------------------------------

model Store {
  id           String      @id @default(cuid())
  slug         String      @unique
  name         String
  description  String?
  logoUrl      String?
  coverUrl     String?

  // Contato (RF02: WhatsApp obrigatório, Instagram opcional)
  whatsapp     String
  instagram    String?

  // Localização (opcional, só quem tem loja física / participa de eventos)
  neighborhood String?
  city         String      @default("Manaus")
  latitude     Float?
  longitude    Float?

  status       StoreStatus @default(PENDING)
  viewsCount   Int         @default(0) // RF05: views recebidas

  owner        User        @relation(fields: [ownerId], references: [id], onDelete: Cascade)
  ownerId      String      @unique

  categories   StoreCategory[]
  products     Product[]
  eventStores  EventStore[]

  createdAt    DateTime    @default(now())
  updatedAt    DateTime    @updatedAt

  @@index([status])
  @@index([neighborhood])
  @@map("stores")
}

// ---------------------------------------------------------------------------
// Categoria da loja (ex.: anime, mangá, TCG, board games, cosplay,
// colecionáveis) — RF02, RF09 (filtro por categoria)
// ---------------------------------------------------------------------------

model Category {
  id     String          @id @default(cuid())
  name   String          @unique
  slug   String          @unique

  stores StoreCategory[]

  @@map("categories")
}

model StoreCategory {
  store      Store    @relation(fields: [storeId], references: [id], onDelete: Cascade)
  storeId    String
  category   Category @relation(fields: [categoryId], references: [id], onDelete: Cascade)
  categoryId String

  @@id([storeId, categoryId])
  @@map("store_categories")
}

// ---------------------------------------------------------------------------
// Produto — RF03, RF04, RF05
// ---------------------------------------------------------------------------

model Product {
  id          String        @id @default(cuid())
  name        String
  description String?
  price       Decimal       @db.Decimal(10, 2)
  status      ProductStatus @default(ACTIVE)
  viewsCount  Int           @default(0) // RF05

  store       Store         @relation(fields: [storeId], references: [id], onDelete: Cascade)
  storeId     String

  images      ProductImage[]
  tags        ProductTag[]

  // Embedding do texto (nome + descrição + tags) para busca semântica
  // por fandom/tema — RF06/RF07. Dimensão 1536 = ex. text-embedding-3-small.
  // Tipo não suportado nativamente pelo Prisma: usar Unsupported + migração
  // manual ou raw SQL para índice (ex.: ivfflat/hnsw).
  embedding   Unsupported("vector(1536)")?

  createdAt   DateTime      @default(now())
  updatedAt   DateTime      @updatedAt

  @@index([storeId])
  @@index([status])
  @@map("products")
}

model ProductImage {
  id        String   @id @default(cuid())
  url       String
  order     Int      @default(0)

  product   Product  @relation(fields: [productId], references: [id], onDelete: Cascade)
  productId String

  @@index([productId])
  @@map("product_images")
}

// ---------------------------------------------------------------------------
// Tag de fandom/tema (ex.: "One Piece", "Pokémon", "D&D") — RF03, RF06, RF07
// synonyms: lista curada de sinônimos para reforçar a busca semântica
// (ex.: tag "Naruto" com synonyms ["shinobi", "ninja"])
// ---------------------------------------------------------------------------

model Tag {
  id        String       @id @default(cuid())
  name      String       @unique
  slug      String       @unique
  synonyms  String[]     @default([])

  products  ProductTag[]

  @@map("tags")
}

model ProductTag {
  product   Product @relation(fields: [productId], references: [id], onDelete: Cascade)
  productId String
  tag       Tag     @relation(fields: [tagId], references: [id], onDelete: Cascade)
  tagId     String

  @@id([productId, tagId])
  @@map("product_tags")
}

// ---------------------------------------------------------------------------
// Evento geek (feiras/convenções) e lojas participantes — RF10–RF14
// Cadastro feito manualmente pela equipe (admin) no MVP
// ---------------------------------------------------------------------------

model Event {
  id           String       @id @default(cuid())
  name         String
  description  String?
  date         DateTime
  address      String?
  neighborhood String?
  latitude     Float
  longitude    Float

  stores       EventStore[]

  createdAt    DateTime     @default(now())
  updatedAt    DateTime     @updatedAt

  @@index([date])
  @@map("events")
}

model EventStore {
  event       Event   @relation(fields: [eventId], references: [id], onDelete: Cascade)
  eventId     String
  store       Store   @relation(fields: [storeId], references: [id], onDelete: Cascade)
  storeId     String
  confirmed   Boolean @default(true) // lojas "confirmadas" no evento (RF11)

  @@id([eventId, storeId])
  @@map("event_stores")
}

// ---------------------------------------------------------------------------
// Log de buscas — apoia a métrica "número de buscas / taxa de resultado
// relevante" mencionada na seção de Métricas de Sucesso do MVP
// ---------------------------------------------------------------------------

model SearchQuery {
  id            String   @id @default(cuid())
  query         String
  resultsCount  Int
  createdAt     DateTime @default(now())

  @@index([createdAt])
  @@map("search_queries")
}
